Keep the file open after signing